--- a/assets/style.css
+++ b/assets/style.css
@@ -107,6 +107,10 @@ h4, h2 {
     border-radius: 10px;
 }
 
+footer {
+    display: none;
+}
+
 /* Desktop version */
 @media only screen and (min-width: 600px) {
     .mainlogo {
@@ -193,5 +197,15 @@ h4, h2 {
     
     .card-description {
         display: block;
+    }
+
+    footer {
+        margin-top: 100px;
+        display: block;
+        background-color: white;
+    }
+
+    form {
+        padding-left: 100px;    
     }
 }
